--- a/menu.html
+++ b/menu.html
@@ -426,6 +426,7 @@
     <footer><center>
         <div style="width:180px;height:30px;color:white;background-color:BLACK;border-radius:10px;border-color:WHITE;"><p style="color:WHITE"><i class="fas fa-phone"></i> +91 7070808307</p></div>
         <p style="color:GREY">&copy; 2024 Mr. Veg. All rights reserved.</p></center>
+        <p style="color:Grey;font-size:15px">Viewing Page</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
